added custom tmp dir.