@@ -37,6 +37,8 @@ public class IndexRunner {
                 .choices("all", "unigram", "bigram", "trigram", "dependency", "ner_date", "ner", "pos", "hypernym", "stitch", "nash")
                 .setDefault("all")
                 .help("Type of index to generate");
+        parser.addArgument("--custom-temp-dir").dest("custom_temp_dir").type(String.class).required(false)
+                .help("Path to a custom directory for temporary files during index generation.");
         parser.addArgument("--debug").action(net.sourceforge.argparse4j.impl.Arguments.storeTrue()).help("Enable debug logging to console");
         try {
             Namespace ns = parser.parseArgs(args);
@@ -48,7 +50,8 @@ public class IndexRunner {
                 ns.getString("index_dir"),
                 ns.getString("stopwords"),
                 ns.getInt("batch_size"),
-                ns.getString("type")
+                ns.getString("type"),
+                ns.getString("custom_temp_dir")
             );
         } catch (ArgumentParserException e) {
             parser.handleError(e);
@@ -60,11 +63,20 @@ public class IndexRunner {
     }
 
     public static void runIndexing(String dbPath, String indexDir, String stopwordsPath,
-            int batchSize, String indexType) throws Exception {
+            int batchSize, String indexType, String customTempDirStr) throws Exception {
         logger.info("Starting indexing process");
         logger.debug("Database: {}", dbPath);
         logger.debug("Index directory: {}", indexDir);
+        if (customTempDirStr != null) {
+            logger.debug("Custom temporary directory: {}", customTempDirStr);
+        }
         
+        Path customTempPath = (customTempDirStr != null && !customTempDirStr.isBlank()) ? Path.of(customTempDirStr) : null;
+        if (customTempPath != null) {
+            Files.createDirectories(customTempPath);
+            logger.info("Using custom temporary directory for ExternalSort: {}", customTempPath.toAbsolutePath());
+        }
+
         // Verify the database exists and is not empty
         Path dbFilePath = Path.of(dbPath);
         if (!Files.exists(dbFilePath)) {
@@ -83,329 +95,184 @@ public class IndexRunner {
             try {
                 if (indexType.equals("all") || indexType.equals("unigram")) {
                     metrics.startBatch(batchSize, "unigram");
-                    long count = getAnnotationCount(conn);
-                    progress.startIndex("Unigram Index", count);
                     Path unigramPath = Path.of(indexDir).resolve("unigram");
                     try (UnigramIndexGenerator gen = new UnigramIndexGenerator(
-                            unigramPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            unigramPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating unigram index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("bigram")) {
                     metrics.startBatch(batchSize, "bigram");
-                    long count = getAnnotationCount(conn);
-                    progress.startIndex("Bigram Index", count);
-                    
-                    // Get path with proper directory structure
                     Path bigramPath = Path.of(indexDir).resolve("bigram");
                     try (BigramIndexGenerator gen = new BigramIndexGenerator(
-                            bigramPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            bigramPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating bigram index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("trigram")) {
                     metrics.startBatch(batchSize, "trigram");
-                    long count = getAnnotationCount(conn);
-                    progress.startIndex("Trigram Index", count);
-                    
-                    // Get path with proper directory structure
                     Path trigramPath = Path.of(indexDir).resolve("trigram");
                     try (TrigramIndexGenerator gen = new TrigramIndexGenerator(
-                            trigramPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            trigramPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating trigram index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("dependency")) {
                     metrics.startBatch(batchSize, "dependency");
-                    long count = getDependencyCount(conn);
-                    progress.startIndex("Dependency Index", count);
-                    
-                    // Get path with proper directory structure
                     Path dependencyPath = Path.of(indexDir).resolve("dependency");
                     try (DependencyIndexGenerator gen = new DependencyIndexGenerator(
-                            dependencyPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            dependencyPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating dependency index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("ner_date")) {
                     metrics.startBatch(batchSize, "ner_date");
-                    long count = getNerDateCount(conn);
-                    progress.startIndex("NER Date Index", count);
-                    
-                    // Get path with proper directory structure
                     Path nerDatePath = Path.of(indexDir).resolve("ner_date");
                     try (NerDateIndexGenerator gen = new NerDateIndexGenerator(
-                            nerDatePath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            nerDatePath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating NER date index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("ner")) {
                     metrics.startBatch(batchSize, "ner");
-                    long count = getNerCount(conn);
-                    progress.startIndex("NER Index", count);
-                    
-                    // Get path with proper directory structure
                     Path nerPath = Path.of(indexDir).resolve("ner");
                     try (NerIndexGenerator gen = new NerIndexGenerator(
-                            nerPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            nerPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating NER index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("pos")) {
                     metrics.startBatch(batchSize, "pos");
-                    long count = getAnnotationCount(conn);
-                    progress.startIndex("POS Tag Index", count);
-                    
-                    // Get path with proper directory structure
                     Path posPath = Path.of(indexDir).resolve("pos");
                     try (POSIndexGenerator gen = new POSIndexGenerator(
-                            posPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            posPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating POS index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("hypernym")) {
                     metrics.startBatch(batchSize, "hypernym");
-                    long count = getAnnotationCount(conn);
-                    progress.startIndex("Hypernym Index", count);
-                    
-                    // Get path with proper directory structure
                     Path hypernymPath = Path.of(indexDir).resolve("hypernym");
                     try (HypernymIndexGenerator gen = new HypernymIndexGenerator(
-                            hypernymPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            hypernymPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating hypernym index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("stitch")) {
                     metrics.startBatch(batchSize, "stitch");
-                    long count = getNerDateCount(conn);
-                    progress.startIndex("Stitch Index", count);
-                    
-                    // Get path with proper directory structure
                     Path stitchPath = Path.of(indexDir).resolve("stitch");
-                    int stitchBatchSize = Math.max(1, batchSize / 100); // Divide by 100 for stitch, ensure at least 1
-                    logger.info("Using adjusted batch size for StitchIndexGenerator: {}", stitchBatchSize);
                     try (StitchIndexGenerator gen = new StitchIndexGenerator(
-                            stitchPath.toString(), stopwordsPath, conn, progress, stitchBatchSize)) {
+                            stitchPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating stitch index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
                 if (indexType.equals("all") || indexType.equals("nash")) {
                     metrics.startBatch(batchSize, "nash");
-                    long count = getNerDateCount(conn);
-                    progress.startIndex("Nash Index", count);
-                    
-                    // Get path with proper directory structure
                     Path nashPath = Path.of(indexDir).resolve("nash");
                     try (NashIndexGenerator gen = new NashIndexGenerator(
-                            nashPath.toString(), stopwordsPath, conn, progress, batchSize)) {
+                            nashPath.toString(), stopwordsPath, conn, progress, batchSize, customTempPath)) {
                         gen.generateIndex();
-                        metrics.recordBatchSuccess((int)count);
+                        metrics.recordBatchSuccess((int)gen.getDocumentCountForIndex());
                     } catch (Exception e) {
                         metrics.recordBatchFailure();
                         logger.error("Error generating nash index: {}", e.getMessage(), e);
+                    } finally {
+                        progress.completeIndex();
                     }
-                    progress.completeIndex();
                 }
 
+            } catch (Exception e) {
+                logger.error("An error occurred during index generation: {}", e.getMessage(), e);
+                throw e;
             } finally {
                 metrics.logIndexingMetrics();
-                progress.close();
             }
-        }
-        logger.info("Index generation completed successfully");
-    }
-
-    private static long getAnnotationCount(Connection conn) throws SQLException {
-        // First check if the annotations table exists
-        try (Statement checkStmt = conn.createStatement();
-             ResultSet checkRs = checkStmt.executeQuery(
-                 "SELECT COUNT(*) FROM sqlite_master WHERE type='table' AND name='annotations'")) {
-            if (checkRs.next() && checkRs.getInt(1) == 0) {
-                // Table doesn't exist
-                logger.error("Annotations table does not exist. Please run annotation stage first.");
-                throw new SQLException("Annotations table does not exist. Please run annotation stage first.");
-            }
-        }
-        
-        String sql = "SELECT COALESCE(MAX(annotation_id), 0) FROM annotations";
-        try (Statement stmt = conn.createStatement();
-             ResultSet rs = stmt.executeQuery(sql)) {
-            if (rs.next()) {
-                return rs.getLong(1);
-            }
-            return 0;
         } catch (SQLException e) {
-            logger.error("Error estimating annotation count using MAX(annotation_id): {}", e.getMessage());
-            return 0;
+            logger.error("SQL error during indexing: {}", e.getMessage(), e);
+            throw e;
         }
-    }
-
-    private static long getDependencyCount(Connection conn) throws SQLException {
-        // First check if the dependencies table exists
-        try (Statement checkStmt = conn.createStatement();
-             ResultSet checkRs = checkStmt.executeQuery(
-                 "SELECT COUNT(*) FROM sqlite_master WHERE type='table' AND name='dependencies'")) {
-            if (checkRs.next() && checkRs.getInt(1) == 0) {
-                // Table doesn't exist
-                logger.error("Dependencies table does not exist. Please run annotation stage first.");
-                throw new SQLException("Dependencies table does not exist. Please run annotation stage first.");
-            }
-        }
-        
-        String sql = "SELECT COALESCE(MAX(dependency_id), 0) FROM dependencies";
-        try (Statement stmt = conn.createStatement();
-             ResultSet rs = stmt.executeQuery(sql)) {
-            if (rs.next()) {
-                return rs.getLong(1);
-            }
-            return 0;
-        } catch (SQLException e) {
-            logger.error("Error estimating dependency count using MAX(dependency_id): {}", e.getMessage());
-            return 0;
-        }
-    }
-
-    private static long getNerDateCount(Connection conn) throws SQLException {
-        // First check if the annotations table exists
-        try (Statement checkStmt = conn.createStatement();
-             ResultSet checkRs = checkStmt.executeQuery(
-                 "SELECT COUNT(*) FROM sqlite_master WHERE type='table' AND name='annotations'")) {
-            if (checkRs.next() && checkRs.getInt(1) == 0) {
-                // Table doesn't exist
-                logger.error("Annotations table does not exist. Please run annotation stage first.");
-                throw new SQLException("Annotations table does not exist. Please run annotation stage first.");
-            }
-        }
-        
-        String sql = "SELECT COALESCE(MAX(annotation_id), 0) FROM annotations WHERE ner = 'DATE'";
-        try (Statement stmt = conn.createStatement();
-             ResultSet rs = stmt.executeQuery(sql)) {
-            if (rs.next()) {
-                return rs.getLong(1);
-            }
-            return 0;
-        } catch (SQLException e) {
-            logger.error("Error estimating NER date count using MAX(annotation_id): {}", e.getMessage());
-            return 0;
-        }
-    }
-
-    private static long getNerCount(Connection conn) throws SQLException {
-        // First check if the annotations table exists
-        try (Statement checkStmt = conn.createStatement();
-             ResultSet checkRs = checkStmt.executeQuery(
-                 "SELECT COUNT(*) FROM sqlite_master WHERE type='table' AND name='annotations'")) {
-            if (checkRs.next() && checkRs.getInt(1) == 0) {
-                // Table doesn't exist
-                logger.error("Annotations table does not exist. Please run annotation stage first.");
-                throw new SQLException("Annotations table does not exist. Please run annotation stage first.");
-            }
-        }
-        
-        String sql = "SELECT COALESCE(MAX(annotation_id), 0) FROM annotations WHERE ner IS NOT NULL AND ner != '' AND ner != 'DATE' AND ner != 'O'";
-        try (Statement stmt = conn.createStatement();
-             ResultSet rs = stmt.executeQuery(sql)) {
-            if (rs.next()) {
-                return rs.getLong(1);
-            }
-            return 0;
-        } catch (SQLException e) {
-            logger.error("Error estimating NER entity count using MAX(annotation_id): {}", e.getMessage());
-            return 0;
-        }
+        logger.info("Indexing process completed.");
     }
 
     /**
-     * Setup index directories for the given project
-     * @param indexDir Base directory for indexes
-     * @param indexType Type of index to create (or "all")
-     * @throws IOException If directory creation fails
+     * Sets up the necessary directory structure for the specified index type.
+     * If 'all' is specified, it ensures the base index directory exists.
+     * If a specific type is given, it ensures that specific subdirectory exists.
+     *
+     * @param indexBaseDir The base directory where all indexes are stored.
+     * @param indexType    The type of index being generated ("all" or a specific type).
+     * @throws IOException If an I/O error occurs creating the directories.
      */
-    private static void setupIndexDirectories(String indexDir, String indexType) throws IOException {
-        Files.createDirectories(Path.of(indexDir));
-        if (indexType.equals("all") || indexType.equals("unigram")) {
-            Files.createDirectories(Path.of(indexDir, "unigram"));
-        }
-        if (indexType.equals("all") || indexType.equals("bigram")) {
-            Files.createDirectories(Path.of(indexDir, "bigram"));
-        }
-        if (indexType.equals("all") || indexType.equals("trigram")) {
-            Files.createDirectories(Path.of(indexDir, "trigram"));
-        }
-        if (indexType.equals("all") || indexType.equals("dependency")) {
-            Files.createDirectories(Path.of(indexDir, "dependency"));
-        }
-        if (indexType.equals("all") || indexType.equals("ner_date")) {
-            Files.createDirectories(Path.of(indexDir, "ner_date"));
-        }
-        if (indexType.equals("all") || indexType.equals("ner")) {
-            Files.createDirectories(Path.of(indexDir, "ner"));
-        }
-        if (indexType.equals("all") || indexType.equals("pos")) {
-            Files.createDirectories(Path.of(indexDir, "pos"));
-        }
-        if (indexType.equals("all") || indexType.equals("hypernym")) {
-            Files.createDirectories(Path.of(indexDir, "hypernym"));
-        }
-        if (indexType.equals("all") || indexType.equals("stitch")) {
-            Files.createDirectories(Path.of(indexDir, "stitch"));
-        }
-        if (indexType.equals("all") || indexType.equals("nash")) {
-            Files.createDirectories(Path.of(indexDir, "nash"));
+    private static void setupIndexDirectories(String indexBaseDir, String indexType) throws IOException {
+        Path baseDirPath = Paths.get(indexBaseDir);
+        Files.createDirectories(baseDirPath);
+
+        if (!"all".equalsIgnoreCase(indexType)) {
+            Path specificIndexDirPath = baseDirPath.resolve(indexType);
+            Files.createDirectories(specificIndexDirPath);
+            logger.debug("Ensured specific index directory exists: {}", specificIndexDirPath.toAbsolutePath());
         }
     }
 }
